project/stage/tests/accept/expr.ul
int main(int input){
  thing[thing];
  thing(thing);
  thing(thing[thing]);
  thing(thing-thing[thing(thing[thing+thing])]);
  thing + thing;
  "thing" + what;
  (thing);
  thing[thing] + thing;
  (thing) + (thing);
  "thing" - (thing[thing-"thing"] + thing);
  (thing + thing - (thing + thing[thing(thing+thing)]));
}