project/stage/tests/reject/bad_types.ul
void main(){
  int[int] blah;
}